<resources>
    <string name="app_name">PromDate</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_required">Email</string>
    <string name="password">Password</string>
    <string name="password_required">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forget your login details?</string>
    <string name="forgot_password_link"><u>Go here for help</u></string>
    <string name="not_registered">Don\'t have an account yet?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Go here to sign up</string>
    <string name="sign_in"><u>Sign in.</u></string>
    <string name="no_internet">Unable to connect to the server. Check your internet connection and try again.</string>
    <string name="failed_login">Invalid login credentials. Please check your username and password and try again.</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="school">School</string>
    <string name="password_no_match">Both passwords must match.</string>
    <string name="invalid_email">The provided email is invalid.</string>
    <string name="required_field">This field is required.</string>
    <string name="title_activity_main_feed">MainFeedActivity</string>
    <string name="action_navigation">Navigation</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register_success">Successfully registered account! Please verify your email, then sign in.</string>
    <string name="singles">Singles</string>
    <string name="couples">Couples</string>
    <string name="wishlist">Wishlist</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_match">Match with this user</string>
    <string name="grade_number">Grade %2d</string>
    <string name="full_name">%s %s</string>
    <string name="couple_name1"><![CDATA[%s %c]]></string>
    <string name="couple_name2"><![CDATA[%s %c]]></string>
    <string name="gender">%s</string>
    <string name="select_gender">Select your gender</string>
    <string name="select_grade">Select your grade</string>
    <string name="home">Home</string>
    <string name="deals">Deals</string>
    <string name="dress_registry">Dress Registry</string>
    <string name="limo_planner">Limo Planner</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="school_location">%s, %s</string>
    <string name="grade_variable">Grade %d</string>
    <string name="single">Single</string>
    <string name="going_with">Going to prom with %s</string>
    <string name="logout">Logout</string>
    <string name="unexpected_error">An unexpected error has occurred.</string>
    <string name="your_profile">Your profile</string>
    <string name="match_error">Failed to send match request! Please try again later.</string>
    <string name="favourite_error">Failed to favourite user! Please try again later.</string>
    <string name="action_edit">Edit your profile</string>
    <string name="action_save">Save your changes</string>
    <string name="bio">Bio</string>
    <string name="instagram">Instagram</string>
    <string name="snapchat">Snapchat</string>
    <string name="twitter">Twitter</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="change_picture">Change Picture</string>
    <string name="grade_required">No grade selected</string>
    <string name="duplicate_email">An account with that email already exists</string>
    <string name="server_error">Internal server error</string>
    <string name="preference_file_key">agency.digitera.android.promdate</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="set_profile_photo">Set profile image</string>
    <string name="from_camera">From camera</string>
    <string name="from_gallery">From gallery</string>
    <string name="add_photo">Add Photo</string>
    <string name="use_camera">Use Camera</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="time_seconds">%ds</string>
    <string name="time_minutes">%dm</string>
    <string name="time_hours">%dh</string>
    <string name="time_days">%dd</string>
    <string name="time_weeks">%dw</string>
    <string name="time_years">%dyrs</string>
    <string name="confirm_request_while_matched">
        "Are you sure you want to send this person a match request? This action will unmatch you with your current partner."
    </string>
    <string name="confirm_no_multiple_requests">
        "Are you sure you want to send this person a match request? This action will cancel your other pending request."
    </string>
    <string name="send_match_request">Send Match Request</string>
    <string name="currently_matched">Currently matched with %s %s</string>
    <string name="remove">Remove</string>
    <string name="invalid_name">This name is invalid.</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="cancel_request">Cancel request</string>
    <string name="unmatch">Unmatch</string>
    <string name="accept_request">Accept Request</string>
    <string name="no_notifications">You don\'t have any unread notifications or pending match requests.</string>
    <string name="require_email_authentication">You must verify your email before you can login.</string>
    <string name="invite">Invite Friends</string>
    <string name="invite_friend_desc">Have friends going to prom who don\'t have the app? Click the button below and send them an invite!</string>
    <string name="invite_a_friend">Invite a friend!</string>
    <string name="invite_chooser">Share PromDate with your friends</string>
    <string name="invite_message">Join me on Promdate!: http://promdate.app</string>
    <string name="view_limo_group">View Limo Group</string>
    <string name="keywords">Keywords</string>
    <string name="brand">Brand</string>
    <string name="dress_search">Dress search</string>
    <string name="model_number">Model number: %s</string>
    <string name="search_results">Search results</string>
    <string name="user_picture">User picture</string>
    <string name="splash_prom">Prom</string>
    <string name="splash_date">Date</string>

    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Select Gender</item>
    </string-array>

    <string-array name="grades_array">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>Select Grade</item>
    </string-array>

    <string-array name="notification_types_array">
        <item>Match Request</item>
        <item>Match Accepted</item>
        <item>Match Rejected</item>
        <item>Unmatched</item>
    </string-array>

    <string-array name="notification_messages_array">
        <item>%s %s has sent you a match request.</item>
        <item>%s %s has accepted your match request.</item>
        <item>%s %s has rejected your match request.</item>
        <item>%s %s has unmatched with you.</item>
    </string-array>
</resources>
