<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.logan.promdate.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_deals"
            android:icon="@drawable/ic_deals"
            android:title="@string/deals" />
        <item
            android:id="@+id/nav_dress_registry"
            android:icon="@drawable/ic_dress"
            android:title="@string/dress_registry" />
        <item
            android:id="@+id/nav_limo_planner"
            android:icon="@drawable/ic_limo"
            android:title="@string/limo_planner" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
