<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_edit_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_edit"
            style="@style/loginEditText"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="190"
            android:theme="@style/EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_edit_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_edit_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_edit"
            style="@style/loginEditText"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:theme="@style/EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_password_edit_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/first_name_edit_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_password_edit"
            style="@style/loginEditText"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:theme="@style/EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_edit_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/school_edit_wrapper"
        app:layout_constraintEnd_toStartOf="@+id/last_name_edit_wrapper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_name_edit"
            style="@style/loginEditText"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLength="190"
            android:theme="@style/EditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_edit_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_name_edit_wrapper"
        app:layout_constraintTop_toTopOf="@+id/first_name_edit_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/last_name_edit"
            style="@style/loginEditText"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:maxLength="190"
            android:theme="@style/EditText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/school_edit_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/gender_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_edit_wrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/school_edit"
            style="@style/loginEditText"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/school"
            android:inputType="textNoSuggestions|textPersonName"
            android:theme="@style/EditText" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:prompt="@string/select_gender"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/grade_spinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_edit_wrapper" />

    <Spinner
        android:id="@+id/grade_spinner"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:prompt="@string/select_grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/gender_spinner"
        app:layout_constraintTop_toTopOf="@+id/gender_spinner" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/linkBlue"
        android:onClick="onRegister"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/already_registered_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

    <TextView
        android:id="@+id/already_registered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:text="@string/already_have_account"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/linkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/already_registered_text"
        app:layout_constraintTop_toTopOf="@+id/already_registered_text" />

</android.support.constraint.ConstraintLayout>